src/objects/CEC_Cheque_Authorization_Limit__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CEC Cheque Authorization Limit , Used to apply limit to value when raising a cheque</description>
    <fields>
        <fullName>Level_1__c</fullName>
        <description>CEC - Level 1 Authorization limit</description>
        <label>Level 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <description>CEC - Level 2 Authorization limit</description>
        <label>Level 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3__c</fullName>
        <description>CEC - Level 3 Authorization limit</description>
        <label>Level 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CEC Cheque Authorization Limit</label>
</CustomObject>